# enspired-coding-challenge

./: .gitignore  README.md  pyproject.toml
src/floor_plan_parser/: cli.py
src/floor_plan_parser/adapters/: controllers.py  presenters.py
src/floor_plan_parser/app/: __init__.py  apartment.py  parse_floor_plan.py
src/floor_plan_parser/domain/: __init__.py  apartment.py  chair.py  room.py
tests/: conftest.py
tests/acceptance/: test_cli.py  test_parse_floor_plan.py
tests/floor_plans/: apartment_b.txt
tests/unit/: test_chair_container.py  test_controllers.py  test_floor_plan.py  test_presenters.py
